取款快完成了~随手推一波

--- a/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj
+++ b/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj
@@ -185,6 +185,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Ccheckinfo.h" />
     <ClInclude Include="CdepositDlg.h" />
     <ClInclude Include="Cdepositinfoprint.h" />
     <ClInclude Include="class\CurrentDeposit.h" />
@@ -197,6 +198,8 @@
     <ClInclude Include="class\Staff.h" />
     <ClInclude Include="class\User.h" />
     <ClInclude Include="CLoginDlg.h" />
+    <ClInclude Include="CwithdrawalDlg.h" />
+    <ClInclude Include="CwithdrawalDlg2.h" />
     <ClInclude Include="database\CppSQLite3.h" />
     <ClInclude Include="database\sqlite3.h" />
     <ClInclude Include="database\sqlite3ext.h" />
@@ -207,6 +210,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Ccheckinfo.cpp" />
     <ClCompile Include="CdepositDlg.cpp" />
     <ClCompile Include="Cdepositinfoprint.cpp" />
     <ClCompile Include="class\changeType.cpp" />
@@ -220,6 +224,8 @@
     <ClCompile Include="class\Staff.cpp" />
     <ClCompile Include="class\User.cpp" />
     <ClCompile Include="CLoginDlg.cpp" />
+    <ClCompile Include="CwithdrawalDlg.cpp" />
+    <ClCompile Include="CwithdrawalDlg2.cpp" />
     <ClCompile Include="database\CppSQLite3.cpp" />
     <ClCompile Include="database\sqlite3.c" />
     <ClCompile Include="NicoNicoBank2.0.cpp" />
