--- a/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj.filters
+++ b/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj.filters
@@ -75,6 +75,15 @@
     <ClInclude Include="Cdepositinfoprint.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CwithdrawalDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Ccheckinfo.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CwithdrawalDlg2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NicoNicoBank2.0.cpp">
@@ -129,6 +138,15 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Cdepositinfoprint.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CwithdrawalDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Ccheckinfo.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CwithdrawalDlg2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
