完成时间修改，进度约百分之50

--- a/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj
+++ b/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj
@@ -186,6 +186,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Ccheckinfo.h" />
+    <ClInclude Include="Cdatechange.h" />
     <ClInclude Include="CdepositDlg.h" />
     <ClInclude Include="Cdepositinfoprint.h" />
     <ClInclude Include="class\CurrentDeposit.h" />
@@ -210,6 +211,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ccheckinfo.cpp" />
+    <ClCompile Include="Cdatechange.cpp" />
     <ClCompile Include="CdepositDlg.cpp" />
     <ClCompile Include="Cdepositinfoprint.cpp" />
     <ClCompile Include="class\changeType.cpp" />
