--- a/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj.filters
+++ b/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj.filters
@@ -84,6 +84,12 @@
     <ClInclude Include="Cdatechange.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Cwithdrainfoprint.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Copenaccount.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NicoNicoBank2.0.cpp">
@@ -147,6 +153,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Cdatechange.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Cwithdrainfoprint.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Copenaccount.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
