--- a/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj.filters
+++ b/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="Copenaccount.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CdueDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NicoNicoBank2.0.cpp">
@@ -159,6 +162,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Copenaccount.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CdueDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
