完成信息修改，还差储蓄员注册，与银行查询余额的一点bug

--- a/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj
+++ b/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj
@@ -187,10 +187,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Ccheckinfo.h" />
+    <ClInclude Include="Ccheckpwd.h" />
     <ClInclude Include="Cdatechange.h" />
     <ClInclude Include="CdepositDlg.h" />
     <ClInclude Include="Cdepositinfoprint.h" />
     <ClInclude Include="CdueDlg.h" />
+    <ClInclude Include="Cinfochange.h" />
     <ClInclude Include="class\CurrentDeposit.h" />
     <ClInclude Include="class\Date.h" />
     <ClInclude Include="class\Deposit.h" />
@@ -216,10 +218,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ccheckinfo.cpp" />
+    <ClCompile Include="Ccheckpwd.cpp" />
     <ClCompile Include="Cdatechange.cpp" />
     <ClCompile Include="CdepositDlg.cpp" />
     <ClCompile Include="Cdepositinfoprint.cpp" />
     <ClCompile Include="CdueDlg.cpp" />
+    <ClCompile Include="Cinfochange.cpp" />
     <ClCompile Include="class\changeType.cpp" />
     <ClCompile Include="class\CurrentDeposit.cpp" />
     <ClCompile Include="class\Date.cpp" />
