--- a/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj
+++ b/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj
@@ -205,6 +205,7 @@
     <ClInclude Include="CLoginDlg.h" />
     <ClInclude Include="Copenaccount.h" />
     <ClInclude Include="Creportloss.h" />
+    <ClInclude Include="Cstaffregist.h" />
     <ClInclude Include="Cwithdrainfoprint.h" />
     <ClInclude Include="CwithdrawalDlg2.h" />
     <ClInclude Include="database\CppSQLite3.h" />
@@ -237,6 +238,7 @@
     <ClCompile Include="CLoginDlg.cpp" />
     <ClCompile Include="Copenaccount.cpp" />
     <ClCompile Include="Creportloss.cpp" />
+    <ClCompile Include="Cstaffregist.cpp" />
     <ClCompile Include="Cwithdrainfoprint.cpp" />
     <ClCompile Include="CwithdrawalDlg2.cpp" />
     <ClCompile Include="database\CppSQLite3.cpp" />
