--- a/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj.filters
+++ b/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="Cstaffregist.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CUserInfo.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NicoNicoBank2.0.cpp">
@@ -189,6 +192,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Cstaffregist.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CUserInfo.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
