--- a/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj
+++ b/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj
@@ -260,6 +260,12 @@
     <None Include="res\NicoNicoBank20.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="picture\back.bmp" />
+    <Image Include="picture\back2.bmp" />
+    <Image Include="picture\back24.bmp" />
+    <Image Include="picture\back24plus.bmp" />
+    <Image Include="picture\back2no.bmp" />
+    <Image Include="picture\back2plus.bmp" />
     <Image Include="picture\bigLogo.ico" />
     <Image Include="picture\bitmap1.bmp" />
     <Image Include="picture\bitmap2.bmp" />
