--- a/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj
+++ b/NicoNicoBank2.0/NicoNicoBank2.0/NicoNicoBank2.0.vcxproj
@@ -54,7 +54,7 @@
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <UseOfMfc>Dynamic</UseOfMfc>
+    <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -116,7 +116,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\c++ study\niconicobank2.0\NicoNicoBank2.0\NicoNicoBank2.0\database;D:\c++ study\niconicobank2.0\NicoNicoBank2.0\NicoNicoBank2.0\class;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>F:\projectManage\visualStudio\cplusplus\CppClassDesign\XiezheYong\niconicoBank2.0\NicoNicoBank2.0\NicoNicoBank2.0\database;F:\projectManage\visualStudio\cplusplus\CppClassDesign\XiezheYong\niconicoBank2.0\NicoNicoBank2.0\NicoNicoBank2.0\class;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -161,13 +161,16 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>F:\projectManage\visualStudio\cplusplus\CppClassDesign\XiezheYong\niconicoBank2.0\NicoNicoBank2.0\NicoNicoBank2.0\database;F:\projectManage\visualStudio\cplusplus\CppClassDesign\XiezheYong\niconicoBank2.0\NicoNicoBank2.0\NicoNicoBank2.0\class;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <BufferSecurityCheck>true</BufferSecurityCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
